--- a/web_static/styles/6-filters.css
+++ b/web_static/styles/6-filters.css
@@ -1,67 +1,72 @@
-.container .filters {
-	background-color: white;
+.filters{
+	background-color:white;
 	height: 70px;
 	width: 100%;
-	border: 1px solid rgb(158, 140, 140);
+	border: solid 1px #dddddd;
 	border-radius: 4px;
 	display: flex;
- 	align-items: stretch;
-	justify-content: flex-start;
+	align-items: center;
+	position: relative;
 }
-.search-btn {
-	right: 30px;
+
+.filters button{
 	font-size: 18px;
-	background-color: #FF5A5F;
-	color: #FFFFFF;
+	background-color: #ff545f;
+	color: #ffffff;
+	position: absolute;
+	right: 30px;
+	border: none;
 	height: 48px;
 	width: 20%;
 	border-radius: 4px;
-	border: none;
-	justify-self: right;
-
 }
-.search-btn:hover {
+
+.filters button:hover{
 	opacity: 90%;
 }
-.location {
-	border-right: 1px solid #DDDDDD;
-}
-.filters .container div {
-	width: 100%;
+
+
+.filters .locations, .filters .amenities {
 	height: 100%;
+	width: 25%;
 }
-.container div h3 {
+
+.filters .locations{
+	border-right: solid 1px #dddddd;
+}
+
+.locations h3, .amenities h3{
+	margin-left: 40px;
+	margin-bottom: 0;
 	font-weight: 600;
-	margin: 12px 45px 2px;
 }
-.container div h4 {
+
+.locations h4, .amenities h4{
 	font-size: 14px;
+	margin-left: 40px;
 	font-weight: 400;
-	margin: 0px 45px;
+	margin-top: 0;
 }
-.container .filters .search-btn {
-	align-self: center;
-	margin-right: 30px;
-}
-.popover {
-	visibility: hidden;
-	vertical-align: top;
-	height: auto;
-	width: 84%;
-	background-color: #FAFAFA;
-	border: 1px solid #DDDDDD;
-	border-radius: 4px;
-	display: inline-block;
-	margin: 0;
-	position: relative;
-}
-.popover li {
-	list-style: none;
-}
-.location:hover .popover{
-	visibility: visible;
+
+.locations:hover .popover, .amenities:hover .popover{
 	display: block;
 }
-.amenities:hover .popover{
-	visibility: visible;
+
+.locations .popover, .amenities .popover{
+	display:none;
+	border-radius: 4px;
+	padding: 10px 30px 20px;
+	border: solid 1px #dddddd;
+	background-color: #fafafa;
+}
+.popover h2{
+	margin-bottom: 0px;
+}
+
+.amenities .popover{
+	padding-top: 30px;
+}
+
+ul{
+	list-style:none;
 }
