--- a/web_static/styles/3-footer.css
+++ b/web_static/styles/3-footer.css
@@ -4,7 +4,7 @@ footer {
 	width: 100%;
 	border-top: 1px solid #CCCCCC;
 	bottom: 0;
-	position: absolute;
+	position: fixed;
 	text-align: center;
 	vertical-align: middle;
 	justify-content: center;
