--- a/web_static/styles/6-filters.css
+++ b/web_static/styles/6-filters.css
@@ -36,16 +36,16 @@
 }
 
 .locations h3, .amenities h3{
-	margin-left: 40px;
-	margin-bottom: 0;
 	font-weight: 600;
+	margin-bottom: 0;
+	margin-left: 40px;
 }
 
 .locations h4, .amenities h4{
-	font-size: 14px;
-	margin-left: 40px;
 	font-weight: 400;
+	font-size: 14px;
 	margin-top: 0;
+	margin-left: 40px;
 }
 
 .locations:hover .popover, .amenities:hover .popover{
@@ -54,13 +54,12 @@
 
 .locations .popover, .amenities .popover{
 	display:none;
-	border-radius: 4px;
-	padding: 10px 30px 20px;
-	border: solid 1px #dddddd;
 	background-color: #fafafa;
-}
-.popover h2{
-	margin-bottom: 0px;
+	border: solid 1px #dddddd;
+	border-radius: 4px;
+	padding-left: 30px;
+	padding-bottom: 20px;
+	padding-top: 10px;
 }
 
 .amenities .popover{
@@ -69,4 +68,8 @@
 
 ul{
 	list-style:none;
+}
+
+.popover h2{
+	margin-bottom: 0px;
 }
