aded header changes and dropdown list fixed h2

--- a/web_static/styles/3-header.css
+++ b/web_static/styles/3-header.css
@@ -2,7 +2,8 @@ header {
 	background-image: url("../images/logo.png");
 	background-repeat: no-repeat;
 	background-color: white;
-	background-position: 15px;
+	background-position: 20px;
+	vertical-align: middle;
 	vertical-align: middle;
 	height: 70px;
 	border-bottom: 1px solid #CCCCCC;
